--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html:
+{
+    overflow: hidden;
+}
+
+body
+{
+    overflow: hidden;
+    position: relative;
+    margin: 0;
+    padding: 0;
+}
